nocodb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nocodb
  namespace: nocodb
  labels:
    app: nocodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nocodb
  template:
    metadata:
      labels:
        app: nocodb
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name: nocodb
          image: nocodb/nocodb:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "3Gi"
            limits:
              memory: "4Gi"
