nocodb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nocodb
  namespace: nocodb
  labels:
    app: nocodb
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: nocodb
